--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>accounts</name>
 	<description>accounts</description>
+	<packaging>jar</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -74,6 +75,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>accounts-microservice</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
