--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>loans</name>
     <description>loans</description>
+    <packaging>jar</packaging>
     <url/>
     <licenses>
         <license/>
